maquetación del proyecto

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+$title-font:'Poppins', sans-serif;
+$text-font: 'Quattrocento Sans', sans-serif;
+$pink-color: #EAA9A3;
+
