--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
-<app-button buttonText="hola mundo" buttonType="button"></app-button>
+<app-navbar></app-navbar>
+<app-home></app-home>
+<app-footer></app-footer>
