--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+$logo-font: 'Open Sans', sans-serif;
 $title-font:'Poppins', sans-serif;
 $text-font: 'Quattrocento Sans', sans-serif;
 $pink-color: #EAA9A3;
+$black-color: #000000;
+$white-color: #FFFFFF;
+$green-color: #BDD4C2;
 
+
+/* Importing Bootstrap SCSS file. */
+@import 'bootstrap/scss/bootstrap';
+
+// *{
+  // overflow:hidden;
+// }
